# motion_planners

./: BUILD_AND_RUN_DIFF_IK.txt  CMakeLists.txt  MUJOCO_PLANNER_README.md  README.md  launch.sh  mujoco_api_reference.md  mujoco_planner_utils_python.py  pyproject.toml
.claude/: settings.json  settings.local.json
config/: obstacles_config.yaml  sim_config.yaml
control/: controller.py
control/cpp/: CMakeLists.txt
control/cpp/include/: diff_ik_control.hpp
control/cpp/src/: run_diff_ik_control.cpp
control/python/: diff_ik_control.py  qp_diff_ik_control.py  test.py
go2_ilqr/cpp/: CMakeLists.txt  main.cpp
go2_ilqr/cpp/include/: go2_task.h  ilqr.h
go2_ilqr/cpp/src/: go2_task.cpp  ilqr.cpp
go2_ilqr/python/: go2_task.py  ilqr.py  run_go2.py
messages/: __init__.py  protocol.py  topics.py  types.py
models/franka_panda/: panda.xml
obstacles/: __init__.py  collision_checker.py  data.yaml  generator.py
planners/cpp/: CMakeLists.txt
planners/cpp/include/: collision_checker.hpp  planner.hpp
planners/cpp/src/: main.cpp
planners/python/: planner.py
references/: mujoco_planner_utils_cpp.h
scenes/: panda_base.xml  panda_with_obstacles.xml
scripts/: cmd_qpos.py  diff_ik_commands.txt  setup_cpp_deps.sh  teleop.py  test_diff_ik.py  test_qp_diff_ik.py
search_planning_cpp/: CMakeLists.txt
search_planning_cpp/Search_2D/: anytime_dstar.cpp  arastar.cpp  astar.cpp  best_first.cpp  bfs.cpp  bi_astar.cpp  common.cpp  dfs.cpp  dijkstra.cpp  dstar.cpp  dstar_lite.cpp  lpastar.cpp  lrtastar.cpp  rtaastar.cpp
search_planning_cpp/examples/: run_astar.cpp
search_planning_cpp/include/: env.hpp  plotting.hpp  queue.hpp  types.hpp
search_planning_cpp/include/algorithms/: anytime_dstar.hpp  arastar.hpp  astar.hpp  base.hpp  best_first.hpp  bfs.hpp  bidirectional_astar.hpp  dfs.hpp  dijkstra.hpp  dstar.hpp  dstar_lite.hpp  lpastar.hpp  lrtastar.hpp  rtaastar.hpp
search_planning_cpp/src/: env.cpp  plotting.cpp
search_planning_cpp/src/algorithms/: astar.cpp
sim/: mujoco_sim.py
tasks/: draw_circle.py
